move incorrectly clasified /candidates endpoints to /videos
