# server/api/controllers/candidates/controller.js
@@ -1,10 +1,6 @@
 import CandidatesService from '../../services/candidates.service';
 
 export class Controller {
-  all(req, res) {
-    CandidatesService.all().then(r => res.json(r));
-  }
-
   byParam(req, res) {
     CandidatesService.byParam(req.params.userId).then(r => {
       if (r) res.json(r);
@@ -15,14 +11,6 @@ export class Controller {
 
   put(req, res) {
     CandidatesService.put(req.body).then(r => res.json(r));
-  }
-
-  delete(req, res) {
-    CandidatesService.delete(req.params.userId, req.params.interviewId).then(
-      r => {
-        res.status(r).end();
-      },
-    );
   }
 }
 export default new Controller();
