# server/api/controllers/candidates/router.js
@@ -5,8 +5,6 @@ import { checkJwt } from '../../../common/auth';
 
 export default express
   .Router()
-  .get('/', checkJwt, controller.all)
   .get('/:userId/', controller.byParam)
-  .put('/', checkJwt, controller.put)
-  .delete('/:userId/:interviewId', checkJwt, controller.delete);
+  .put('/', checkJwt, controller.put);
 
