# server/common/swagger/Api.yaml
@@ -258,6 +258,27 @@ paths:
           description: Return the example with the specified id
         404:
           description: Example not found
+    delete:
+      tags:
+        - Videos
+      parameters:
+        - name: authorization
+          in: header
+          description: Bearer <auth_token>
+          required: true
+          type: string
+        - name: id
+          in: path
+          required: true
+          description: The users id
+          type: string
+      responses:
+        204:
+          description: The candidate video interview with the specified ID was successfully deleted
+        400:
+          description: Malformed ID, the ID has to be a 12 character string
+        404:
+          description: Candidate video unterview with given IDs did not exist
 
   /interviews:
     get:
@@ -298,19 +319,6 @@ paths:
           description: Interview with given ID did not exist
 
   /candidates:
-    get:
-      parameters:
-        - name: authorization
-          in: header
-          description: Bearer <auth_token>
-          required: true
-          type: string
-      tags:
-        - Candidates
-      description: Fetch all Candidate Interviews
-      responses:
-        200:
-          description: Returns all candidate interviews
     put:
       tags:
         - Candidates
@@ -348,34 +356,6 @@ paths:
           description: Malformed ID
         404:
           description: Candidate with given ID did not exist
-
-  /candidates/{userId}/{interviewId}:
-    delete:
-      tags:
-        - Candidates
-      parameters:
-        - name: authorization
-          in: header
-          description: Bearer <auth_token>
-          required: true
-          type: string
-        - name: userId
-          in: path
-          required: true
-          description: The users auth0 ID
-          type: string
-        - name: interviewId
-          in: path
-          required: true
-          description: The ID of the interview
-          type: string
-      responses:
-        204:
-          description: The candidate interviews with the specified ID was successfully deleted
-        400:
-          description: Malformed ID, the ID has to be a 12 character string
-        404:
-          description: Candidate Interview with given IDs did not exist
 
   /emails:
     post:
